Fix modal box scroll & overflow problem in Projects

--- a/css/style.css
+++ b/css/style.css
@@ -564,28 +564,30 @@ footer #signature {
 
 /* The Modal */
 .modal-mask {
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  display: none; /* Hidden by default */
+  width: 100%;
+  height: 100%;
+  display: none; 
   position: fixed;
   z-index: 5;
   left: 0;
   top: 0;
   overflow: auto;
-  background-color: rgba(0,0,0,0.3); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.3);
+/*  padding: 0 20px;*/
 }
 
 /* Modal Content/Box */
 .modal-popup {
-  position: fixed;
-  left: 7%;
-  top: 30vh;
+  position: relative;
+  margin: 20vh auto 20px auto;
   width: 75%;
+  max-width: 600px;
   z-index: 10;
   background-color: #fefefe;
   display: none;
   padding: 10px 5.5%;
   border-radius: .38em;
+  overflow: auto;
 }
 
 /* The Close Button */
@@ -811,13 +813,6 @@ footer #signature {
 
   .other-project .project-role {
     font-size: 14.5px;
-  }
-  
-  .modal-popup {
-    left: 21%;
-    top: 30vh;
-    width: 52%;
-    padding: 10px 3%;
   }
 
   
